@@ -51,6 +51,7 @@ Mnemonic(String description, int wordcase) {
 	this.wordcase = wordcase;
 	strings = new HashMap();
 	values = new HashMap();
+	max = Integer.MAX_VALUE;
 }
 
 /** Sets the maximum numeric value */
@@ -65,7 +66,7 @@ setMaximum(int max) {
  */
 public void
 setPrefix(String prefix) {
-	this.prefix = prefix;
+	this.prefix = sanitize(prefix);
 }
 
 /**
@@ -91,7 +92,7 @@ toInteger(int val) {
  */
 public void
 check(int val) {
-	if (val < 0 || (max > 0 && val > max)) {
+	if (val < 0 || val > max) {
 		throw new IllegalArgumentException(description + " " + val +
 						   "is out of range");
 	}
@@ -111,7 +112,7 @@ private int
 parseNumeric(String s) {
 	try {
 		int val = Integer.parseInt(s);
-		if (val >= 0 && (max == 0 || val <= max))
+		if (val >= 0 && val <= max)
 			return val;
 	}
 	catch (NumberFormatException e) {
@@ -151,9 +152,14 @@ addAlias(int val, String str) {
  * Copies all mnemonics from one table into another.
  * @param val The numeric value
  * @param string The text string
+ * @throws IllegalArgumentException The wordcases of the Mnemonics do not
+ * match.
  */
 public void
 addAll(Mnemonic source) {
+	if (wordcase != source.wordcase)
+		throw new IllegalArgumentException(source.description +
+						   ": wordcases do not match");
 	strings.putAll(source.strings);
 	values.putAll(source.values);
 }
